--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="description" content="larei's personal website." />
     <meta name="keywords" content="larei, lareii" />
     <meta name="author" content="larei" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/images/GLogo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/images/GLogo.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
+
   <body class="overflow-x-hidden bg-nova-dark text-nova-milk font-mono">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
